basically just made the whole web page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
 <body>
   <img id="logo" src="images/croppedlogo.png" alt="destructicide band logo">
   <p>Black thrash/deathmetal band based out of Murfreesboro TN</p>
+  <!-- <iframe width="420" height="315"
+  src="https://www.youtube.com/embed/qPZHIvJZIV4">
+  </iframe> -->
+  <div id="headerVids">
+    <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FDestructicide%2Fvideos%2F2420745628166960%2F&show_text=false&width=560&t=0" width="325" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true">
+    </iframe>
+    
+    <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FDestructicide%2Fvideos%2F777094882707702%2F&show_text=false&width=476&t=0" width="300rem" height="300rem" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true">
+    </iframe>
+  </div>
+
+  <div class="container">
+    <div class="division"></div>
+  </div>
+
+  <p>Clips</p>
+
+  <div id="clipVids" class="container">
+    <iframe src="https://www.facebook.com/plugins/video.php?height=420&href=https%3A%2F%2Fwww.facebook.com%2FDestructicide%2Fvideos%2F479834482884157%2F&show_text=false&width=560&t=0" width="400" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+
+    <iframe width="400" height="300" src="https://www.youtube.com/embed/qPZHIvJZIV4?start=1544" title="Hope and Hunter&#39;s Birthday Bloodbath" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <iframe src="https://www.facebook.com/plugins/video.php?height=316&href=https%3A%2F%2Fwww.facebook.com%2FDestructicide%2Fvideos%2F2050032491887369%2F&show_text=false&width=560&t=0" width="400" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+
+    <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FDestructicide%2Fvideos%2F2043739972516621%2F&show_text=false&width=560&t=0" width="400" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+
+    <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FDestructicide%2Fvideos%2F2292958620776377%2F&show_text=false&width=560&t=0" width="400" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+  </div>
 
   <script src="main.js"></script>
 </body>
