added a facebook link with logo

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FDestructicide%2Fvideos%2F2292958620776377%2F&show_text=false&width=560&t=0" width="400" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
   </div>
 
+  <div class="socials">
+    <a href="https://www.facebook.com/Destructicide" target="_blank">
+      <img id="fb" class="socials" src="https://freepnglogo.com/images/all_img/facebook-circle-logo-png.png" alt="">
+      
+    </a>
+  </div>
+
   <script src="main.js"></script>
 </body>
 </html>
